<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home"></item>
        <item
            android:id="@+id/nav_department"
            android:icon="@drawable/department"
            android:title="@string/computer_science"></item>
    </group>


    <group android:checkableBehavior="single">
        <item android:title="@string/account">
            <menu>
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/nav_profile_icon"
                    android:title="@string/profile"></item>
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/nav_login_icon"
                    android:title="@string/log_in"></item>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/nav_logout_icon"
                    android:title="@string/log_out"></item>
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="App Settings">
            <menu>
                <item
                    android:id="@+id/nav_darkmode_toggle"
                    android:icon="@drawable/nav_darkmode_toggle_icon"
                    android:title="Night Mode"></item>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/inav_settings_icon"
                    android:title="Settings"></item>
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/share"
                    android:title="@string/share"></item>
                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/about_us"
                    android:title="@string/about_us"></item>
            </menu>
        </item>
    </group>
</menu>